Addmusic2/Model/AntlrSchema/PreprocessorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Projects/Visual Studio/Addmusic2/Addmusic2/Addmusic2/Preprocessor.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class PreprocessorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Amk=1, Amm=2, Am4=3, AmkV1=4, DEFINE=5, IFDEF=6, IFNDEF=7, UNDEF=8, IF=9, 
		ELSE=10, ELSEIF=11, ENDIF=12, ERROR=13, ReplacementText=14, WHITESPACE=15, 
		Comment=16, ArbitraryText=17;
	public const int
		RULE_song = 0, RULE_preprocessorElement = 1, RULE_replacements = 2, RULE_amk = 3, 
		RULE_generalAmk = 4, RULE_amm = 5, RULE_am4 = 6, RULE_amkV1 = 7, RULE_defines = 8, 
		RULE_define = 9, RULE_undefine = 10, RULE_error = 11, RULE_conditionalLogics = 12, 
		RULE_if = 13, RULE_elseIf = 14, RULE_else = 15, RULE_ifdef = 16, RULE_ifndef = 17, 
		RULE_arbitraryText = 18;
	public static readonly string[] ruleNames = {
		"song", "preprocessorElement", "replacements", "amk", "generalAmk", "amm", 
		"am4", "amkV1", "defines", "define", "undefine", "error", "conditionalLogics", 
		"if", "elseIf", "else", "ifdef", "ifndef", "arbitraryText"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "Amk", "Amm", "Am4", "AmkV1", "DEFINE", "IFDEF", "IFNDEF", "UNDEF", 
		"IF", "ELSE", "ELSEIF", "ENDIF", "ERROR", "ReplacementText", "WHITESPACE", 
		"Comment", "ArbitraryText"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Preprocessor.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PreprocessorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PreprocessorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PreprocessorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SongContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PreprocessorParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorElementContext[] preprocessorElement() {
			return GetRuleContexts<PreprocessorElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorElementContext preprocessorElement(int i) {
			return GetRuleContext<PreprocessorElementContext>(i);
		}
		public SongContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_song; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterSong(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitSong(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSong(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SongContext song() {
		SongContext _localctx = new SongContext(Context, State);
		EnterRule(_localctx, 0, RULE_song);
		int _la;
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Amk:
			case Amm:
			case Am4:
			case AmkV1:
			case DEFINE:
			case IFDEF:
			case IFNDEF:
			case UNDEF:
			case IF:
			case ERROR:
			case ReplacementText:
			case ArbitraryText:
				EnterOuterAlt(_localctx, 1);
				{
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 38;
					preprocessorElement();
					}
					}
					State = 41;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 156670L) != 0) );
				State = 43;
				Match(Eof);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprocessorElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReplacementsContext replacements() {
			return GetRuleContext<ReplacementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AmkContext amk() {
			return GetRuleContext<AmkContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalLogicsContext conditionalLogics() {
			return GetRuleContext<ConditionalLogicsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefinesContext defines() {
			return GetRuleContext<DefinesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArbitraryTextContext arbitraryText() {
			return GetRuleContext<ArbitraryTextContext>(0);
		}
		public PreprocessorElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessorElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocessorElementContext preprocessorElement() {
		PreprocessorElementContext _localctx = new PreprocessorElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_preprocessorElement);
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ReplacementText:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				replacements();
				}
				break;
			case Amk:
			case Amm:
			case Am4:
			case AmkV1:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				amk();
				}
				break;
			case IFDEF:
			case IFNDEF:
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				conditionalLogics();
				}
				break;
			case DEFINE:
			case UNDEF:
			case ERROR:
				EnterOuterAlt(_localctx, 4);
				{
				State = 51;
				defines();
				}
				break;
			case ArbitraryText:
				EnterOuterAlt(_localctx, 5);
				{
				State = 52;
				arbitraryText();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReplacementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ReplacementText() { return GetToken(PreprocessorParser.ReplacementText, 0); }
		public ReplacementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_replacements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterReplacements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitReplacements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReplacements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReplacementsContext replacements() {
		ReplacementsContext _localctx = new ReplacementsContext(Context, State);
		EnterRule(_localctx, 4, RULE_replacements);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(ReplacementText);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AmkContext : ParserRuleContext {
		public AmkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_amk; } }
	 
		public AmkContext() { }
		public virtual void CopyFrom(AmkContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AmmVersionContext : AmkContext {
		[System.Diagnostics.DebuggerNonUserCode] public AmmContext amm() {
			return GetRuleContext<AmmContext>(0);
		}
		public AmmVersionContext(AmkContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAmmVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAmmVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAmmVersion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Am4VersionContext : AmkContext {
		[System.Diagnostics.DebuggerNonUserCode] public Am4Context am4() {
			return GetRuleContext<Am4Context>(0);
		}
		public Am4VersionContext(AmkContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAm4Version(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAm4Version(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAm4Version(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GeneralAmkVersionContext : AmkContext {
		[System.Diagnostics.DebuggerNonUserCode] public GeneralAmkContext generalAmk() {
			return GetRuleContext<GeneralAmkContext>(0);
		}
		public GeneralAmkVersionContext(AmkContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterGeneralAmkVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitGeneralAmkVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGeneralAmkVersion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AmkV1VersionContext : AmkContext {
		[System.Diagnostics.DebuggerNonUserCode] public AmkV1Context amkV1() {
			return GetRuleContext<AmkV1Context>(0);
		}
		public AmkV1VersionContext(AmkContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAmkV1Version(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAmkV1Version(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAmkV1Version(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AmkContext amk() {
		AmkContext _localctx = new AmkContext(Context, State);
		EnterRule(_localctx, 6, RULE_amk);
		try {
			State = 61;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Amk:
				_localctx = new GeneralAmkVersionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				generalAmk();
				}
				break;
			case Amm:
				_localctx = new AmmVersionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 58;
				amm();
				}
				break;
			case Am4:
				_localctx = new Am4VersionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 59;
				am4();
				}
				break;
			case AmkV1:
				_localctx = new AmkV1VersionContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 60;
				amkV1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GeneralAmkContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Amk() { return GetToken(PreprocessorParser.Amk, 0); }
		public GeneralAmkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_generalAmk; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterGeneralAmk(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitGeneralAmk(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGeneralAmk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GeneralAmkContext generalAmk() {
		GeneralAmkContext _localctx = new GeneralAmkContext(Context, State);
		EnterRule(_localctx, 8, RULE_generalAmk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			Match(Amk);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AmmContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Amm() { return GetToken(PreprocessorParser.Amm, 0); }
		public AmmContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_amm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAmm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAmm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAmm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AmmContext amm() {
		AmmContext _localctx = new AmmContext(Context, State);
		EnterRule(_localctx, 10, RULE_amm);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(Amm);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Am4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Am4() { return GetToken(PreprocessorParser.Am4, 0); }
		public Am4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_am4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAm4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAm4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAm4(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Am4Context am4() {
		Am4Context _localctx = new Am4Context(Context, State);
		EnterRule(_localctx, 12, RULE_am4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(Am4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AmkV1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AmkV1() { return GetToken(PreprocessorParser.AmkV1, 0); }
		public AmkV1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_amkV1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterAmkV1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitAmkV1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAmkV1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AmkV1Context amkV1() {
		AmkV1Context _localctx = new AmkV1Context(Context, State);
		EnterRule(_localctx, 14, RULE_amkV1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(AmkV1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefineContext define() {
			return GetRuleContext<DefineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UndefineContext undefine() {
			return GetRuleContext<UndefineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ErrorContext error() {
			return GetRuleContext<ErrorContext>(0);
		}
		public DefinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defines; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterDefines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitDefines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefinesContext defines() {
		DefinesContext _localctx = new DefinesContext(Context, State);
		EnterRule(_localctx, 16, RULE_defines);
		try {
			State = 74;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DEFINE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				define();
				}
				break;
			case UNDEF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 72;
				undefine();
				}
				break;
			case ERROR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 73;
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(PreprocessorParser.DEFINE, 0); }
		public DefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_define; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineContext define() {
		DefineContext _localctx = new DefineContext(Context, State);
		EnterRule(_localctx, 18, RULE_define);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(DEFINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
